config/webhook/manifests.yaml

---
apiVersion: admissionregistration.k8s.io/v1beta1
kind: ValidatingWebhookConfiguration
metadata:
  creationTimestamp: null
  name: validating-webhook-configuration
webhooks:
- clientConfig:
    caBundle: Cg==
    service:
      name: webhook-service
      namespace: system
      path: /validate-cloud-redhat-com-v1alpha1-clowdapp
  failurePolicy: Fail
  name: vclowdapp.cloud.redhat.com
  rules:
  - apiGroups:
    - cloud.redhat.com
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - clowdapps
  sideEffects: None
  admissionReviewVersions:
    - "v1alpha1"
